--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ http://www.templatemo.com/tm-467-easy-profile
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<img src="images/tm-easy-profile.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
+				<img src="images/one.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
 				<hr>
-				<h1 class="tm-title bold shadow">Hi, I am Julia</h1>
-				<h1 class="white bold shadow">Creative Director</h1>
+				<h1 class="tm-title bold shadow">Hi, I am Sowjanya</h1>
+				<h1 class="white bold shadow">Graduated</h1>
 			</div>
 		</div>
 	</div>
